--- a/README.adoc
+++ b/README.adoc
@@ -83,9 +83,7 @@ The address is `0x40000000`, which is what we set the `ENTRY` to in link:link.ld
 Run on `gem5` instead of QEMU:
 
 ....
-./build-samples -g
-./build-gem5
-./run -g
+./build-gem5 && ./build-samples -g && ./run -g
 ....
 
 On another shell:
@@ -112,7 +110,13 @@ GDB step debug:
 
 ==== gem5 aarch64
 
-TODO blows up. The trace contains just:
+TODO blows up with:
+
+....
+build/ARM/cpu/simple/atomic.cc:495: virtual Fault AtomicSimpleCPU::writeMem(uint8_t*, unsigned int, Addr, Request::Flags, uint64_t*): Assertion `!pkt.isError()' failed.
+....
+
+The trace contains just:
 
 ....
       0: system.cpu T0 : 0x10000    :   adcle   r0, r0, #1048576 : IntAlu : Predicated False
